Completed Basic-Portfolio Update

--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,11 @@
     <head>
         <title>ping Me</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="reset.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <body style="background-image:url('assets/images/larsenlake.png');">
+        <body style="background-image:url('larsenlake.png');">
         <header id="masthead">
         <div class="container">
             <a href="index.html" id="logo">Ludwig Van Winkle</a>
@@ -53,12 +53,12 @@
             <div id="connect">
                 <h2>Connect With Me</h2>
 
-                <img src="assets/images/githubicon.png" class="social" alt="Github">
-                <img src="assets/images/linkedin.png" class="social" alt="LinkedIn">
-                <img src="assets/images/facebook.png" class="social" alt="Facebook">
+                <img src="githubicon.png" class="social" alt="Github">
+                <img src="linkedin.png" class="social" alt="LinkedIn">
+                <img src="facebook.png" class="social" alt="Facebook">
             </div>
 
-            <iframe src="audio/Drake_HotLineBling.mp3" allow="autoplay">
+            <iframe src="Drake_HotLineBling.mp3" allow="autoplay">
             </iframe>
 
         </section>
