--- a/portfolio.html
+++ b/portfolio.html
@@ -3,11 +3,11 @@
     <head>
         <title>Portfolio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="reset.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-            <body style="background-image:url('assets/images/larsenlake.png');">
+            <body style="background-image:url('larsenlake.png');">
         <header id="masthead">
         <div class="container">
             <a href="index.html" id="logo">Ludwig Van Winkle</a>
@@ -25,22 +25,22 @@
             <h1>Portfolio</h1>
 
             <div class="work"> 
-            <img src="assets/images/TMNT.png" class="auth-image" alt="Ninja-Turtles">
+            <img src="TMNT.png" class="auth-image" alt="Ninja-Turtles">
                 <h3>Ninja Turtles</h3>
             </div>  
 
             <div class="work"> 
-                <img src="assets/images/kanyewest.png" class="auth-image" alt="Kanye West">
+                <img src="kanyewest.png" class="auth-image" alt="Kanye West">
                   <h3>Kanye West</h3>
             </div> 
 
             <div class="work"> 
-            <img src="assets/images/tombrady.png" class="auth-image" alt="Tom-Brady">
+            <img src="tombrady.png" class="auth-image" alt="Tom-Brady">
                   <h3>Tom Brady</h3>
             </div> 
 
             <div class="work"> 
-            <img src="assets/images/rihanna.png" class="auth-image" alt="Rihanna">
+            <img src="rihanna.png" class="auth-image" alt="Rihanna">
                     <h3>Rihanna</h3>
             </div> 
 
@@ -50,12 +50,12 @@
             <div id="connect">
                 <h2>Connect With Me</h2>
 
-                <img src="assets/images/githubicon.png" class="social" alt="Github">
-                <img src="assets/images/linkedin.png" class="social" alt="LinkedIn">
-                <img src="assets/images/facebook.png" class="social" alt="Facebook">
+                <img src="githubicon.png" class="social" alt="Github">
+                <img src="linkedin.png" class="social" alt="LinkedIn">
+                <img src="facebook.png" class="social" alt="Facebook">
             </div>
 
-            <iframe src="audio/JayZRihanna_RunThisTown.mp3" allow="autoplay">
+            <iframe src="JayZRihanna_RunThisTown.mp3" allow="autoplay">
             </iframe>
 
         </section>
