Updated Basic-Portfolio 2.0

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>About Mir</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="reset.css">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
         <body style="background-image:url('assets/images/larsenlake.png');">
@@ -24,7 +24,7 @@
         <section class="main-section">
             <h1>About Mir</h1>
 
-            <img src="turtle.jpg" class="auth-image" alt="turtle-picture">
+            <img src="assets/images/turtle.jpg" class="auth-image" alt="turtle-picture">
 
                 <p>Hello, my name is Ludwig, :) named after Beethoven and I home in Larsen Lake 
                    Bellevue, Washington. This is where my owner set me free and I have been taking 
@@ -46,12 +46,12 @@
             <div id="connect">
                 <h2>Connect With Me</h2>
 
-                <img src="githubicon.png" class="social" alt="Github">
-                <img src="linkedin.png" class="social" alt="LinkedIn">
-                <img src="facebook.png" class="social" alt="Facebook">
+                <img src="assets/images/githubicon.png" class="social" alt="Github">
+                <img src="assets/images/linkedin.png" class="social" alt="LinkedIn">
+                <img src="assets/images/facebook.png" class="social" alt="Facebook">
             </div>
 
-            <iframe src="ABBA_Dancing_Queen.mp3" allow="autoplay">
+            <iframe src="audio/ABBA_Dancing_Queen.mp3" allow="autoplay">
             </iframe>
 
         </section>
