--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 <p>If you haven't visited Larsen Lake I suggest you do because you're missing out. It's got
                    the best scenery a turtle can ask for. Don't be that person, don't miss out! It's lonely 
                    here because I'm the only turtle, so feel free to visit anytime. You never know I might pop up and say Hello! 
+                   <a href="file://C:/Users/Janum/UWbootcamp/UW-SEA-FSF-PT-07-2019-U-C/03-Week/Word%20Guess%20Game/index.html"
+            target="new tab"> Click here to go to my word guess game! </a>
                 </p>
 
              
@@ -51,7 +53,7 @@
                 <img src="assets/images/facebook.png" class="social" alt="Facebook">
             </div>
 
-            <iframe src="audio/ABBA_Dancing_Queen.mp3" allow="autoplay">
+            <iframe src="audio/TiestoSevenn_Boom.mp3" allow="autoplay">
             </iframe>
 
         </section>
