update to web link to word guess game

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>If you haven't visited Larsen Lake I suggest you do because you're missing out. It's got
                    the best scenery a turtle can ask for. Don't be that person, don't miss out! It's lonely 
                    here because I'm the only turtle, so feel free to visit anytime. You never know I might pop up and say Hello! 
-                   <a href="file://C:/Users/Janum/UWbootcamp/UW-SEA-FSF-PT-07-2019-U-C/03-Week/Word%20Guess%20Game/index.html"
+                   <a href="https://greatbluefish.github.io/Word_Guess_Game.github.io/"
             target="new tab"> Click here to go to my word guess game! </a>
                 </p>
 
